<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gaseta"
    android:orientation="vertical"
    tools:context=".view.GasEtaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

             <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:background="#86A191B1"
                 android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/txt_titulo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/ic_launcher_round"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:background="#6D985F15"
                    android:ems="10"
                    android:hint="@string/txt_hint_edit_gasolina"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="#F8F7F5"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#668C5206"
                    android:ems="10"
                    android:hint="@string/txt_hint_edit_etanol"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/black"
                android:text="@string/txt_button_calcular" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5C05D6"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txtResultado"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_button_limpar" />


            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#5F04B4"
                android:textColorHint="@color/black"
                android:textColor="@color/white"
                android:enabled="false"
                android:text="@string/txt_button_salvar" />


            <Button
                android:id="@+id/btnFinalisar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/black"
                android:text="@string/txt_button_finalizar" />

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>